--- a/Xcos_PartB/examples/xcos_final.html
+++ b/Xcos_PartB/examples/xcos_final.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-	<title>User object example for mxGraph</title>
+	<title>Xcos Example With Bonus</title>
 
 	
 	<script type="text/javascript">
